header structure completed

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,81 +1,92 @@
 * {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	vertical-align: baseline;
-	background: transparent;
-	font-weight: normal;
-	text-decoration: none;
-	outline: none;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    vertical-align: baseline;
+    background: transparent;
+    font-weight: normal;
+    text-decoration: none;
+    outline: none;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+:root {
+    /* Colors  */
+    --Blue: #7C8EE9;
+    --Dark-Blue: #333459;
+    --Brown: #B87C78;
+
+    /* Font Color */
+    --Black: #233543;
+    --Gray: #868686;
 }
 
 ol,
 ul {
-	list-style: none;
+    list-style: none;
 }
 
 del {
-	text-decoration: line-through;
+    text-decoration: line-through;
 }
 
 body {
-	font-family: "Outfit", Arial, Helvetica, sans-serif;
-	font-size: 17px;
-	color: #000;
-	overflow-x: hidden;
-	min-width: 320px;
-	font-weight: 500;
+    font-family: "Outfit", Arial, Helvetica, sans-serif;
+    font-size: 17px;
+    color: var(--Black);
+    overflow-x: hidden;
+    min-width: 320px;
+    font-weight: 500;
 }
 
 input,
 textarea,
 select {
-	font-family: "Outfit", Arial, Helvetica, sans-serif;
-	font-weight: 500;
+    font-family: "Outfit", Arial, Helvetica, sans-serif;
+    font-weight: 500;
 }
 
 a {
-	color: #000;
+    color: #000;
 }
 
 .thumb {
-	display: block;
+    display: block;
 }
 
 .thumb img {
-	display: block;
-	width: 100%;
+    display: block;
+    width: 100%;
 }
 
 p {
-	line-height: 1.6em;
-	font-size: 16px;
-	font-family: "Outfit", Arial;
-	font-weight: 500;
-	color: #000;
+    line-height: 1.6em;
+    font-size: 16px;
+    font-family: "Outfit", Arial;
+    font-weight: 500;
+    color: #000;
 }
 
 .hidden {
-	display: none;
+    display: none;
 }
 
 br.clear {
-	clear: both;
-	line-height: 0;
+    clear: both;
+    line-height: 0;
 }
 
 .wrapper {
-	width: 90%;
-	margin: 0 auto;
-	max-width: 1200px;
+    width: 90%;
+    margin: 0 auto;
+    max-width: 1200px;
 }
 
 .flex-wrapper {
-	display: flex;
-	justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 }
 
 @font-face {
@@ -109,6 +120,7 @@ br.clear {
     font-style: normal;
     font-display: swap;
 }
+
 @font-face {
     font-family: 'Antonio';
     src: url('../fonts/Antonio-Bold.woff2') format('woff2');
@@ -117,3 +129,7 @@ br.clear {
     font-display: swap;
 }
 
+#home {
+    height: 100vh;
+    width: 100%;
+}
