--- a/CSS/style.css
+++ b/CSS/style.css
@@ -197,6 +197,94 @@ header div.container div.right ul li:last-child a {
     letter-spacing: 1px;
 }
 
+header div.container div.right ul li:last-child a:hover {
+    color: #fff;
+    background: var(--Blue);
+}
+
 header div.container div.right ul li:last-child a::before {
     display: none;
+}
+
+/* spotlight section  */
+
+#spotlight section.wrapper {
+    margin: 0;
+    margin-left: 8%;
+    width: 100%;
+}
+
+#spotlight div.container {
+    height: calc(100vh - 80px);
+    display: flex;
+}
+
+#spotlight div.container div.left {
+    width: 30%;
+    padding: 45px 15px;
+}
+
+#spotlight div.container div.left div.counts {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+}
+
+#spotlight div.container div.left div.counts div.count {
+    text-align: center;
+    width: 30%;
+}
+
+#spotlight div.container div.left div.counts div.count span.number {
+    color: var(--Brown);
+    font-size: 25px;
+    font-family: 'Antonio';
+}
+
+#spotlight div.container div.left div.counts div.content {
+    position: absolute;
+    bottom: -346px;
+    height: 325px;
+    width: 485px;
+    padding: 25px 44px;
+    background-color: #faf9f7;
+}
+
+#spotlight div.container div.left div.counts div.content h2 {
+    font-weight: 600;
+    font-size: 30px;
+    margin: 15px 0px;
+    padding-right: 40px;
+}
+
+#spotlight div.container div.left div.counts div.content p {
+    font-size: 15px;
+    margin-bottom: 35px;
+    padding-right: 10px;
+}
+
+#spotlight div.container div.left div.counts div.content a.button {
+    margin-top: 20px;
+    padding: 12px 20px;
+    background: var(--Blue);
+    color: #fff;
+    font-size: 16px;
+}
+
+#spotlight div.container div.right {
+    width: 70%;
+    height: calc(100vh - 80px);
+    display: flex;
+    justify-content: space-between;
+}
+
+#spotlight div.container div.right div.image {
+    display: inline-block;
+    width: 90%;
+}
+
+#spotlight div.container div.right div.image img {
+    width: 100%;
+    height: 475px;
 }
