--- a/CSS/style.css
+++ b/CSS/style.css
@@ -281,10 +281,11 @@ header div.container div.right ul li:last-child a::before {
 
 #spotlight div.container div.right div.image {
     display: inline-block;
-    width: 90%;
+    width: 100%;
 }
 
 #spotlight div.container div.right div.image img {
+    overflow: hidden;
     width: 100%;
     height: 475px;
 }
