--- a/CSS/style.css
+++ b/CSS/style.css
@@ -491,3 +491,74 @@ header div.container div.right ul li:last-child a::before {
 #works div.container div.work ul li div.zoom a img {
     width: 100%;
 }
+
+/* Why Choice Us  */
+article {
+    padding: 60px 0px;
+    background: #faf9f7;
+}
+
+article div.container div.heading {
+    margin: 80px 0;
+}
+
+article div.container div.heading h2 {
+    position: relative;
+    font-weight: 500;
+    font-size: 30px;
+}
+
+article div.container div.heading h2::after {
+    content: "";
+    position: absolute;
+    height: 4px;
+    width: 4%;
+    left: 0;
+    bottom: -9px;
+    background: var(--Blue);
+    display: block;
+}
+
+article div.container div.contents {
+    display: flex;
+    justify-content: space-between;
+}
+
+article div.container div.contents div.content {
+    width: 22%;
+}
+
+article div.container div.contents div.content a {
+    display: block;
+    width: 13%;
+    margin-left: 15px;
+    position: relative;
+    z-index: 0;
+}
+
+article div.container div.contents div.content a img {
+    width: 100%;
+
+}
+
+article div.container div.contents div.content a::before {
+    content: "";
+    position: absolute;
+    height: 80px;
+    width: 90px;
+    left: -20px;
+    bottom: -18px;
+    background: #fff;
+    display: block;
+    z-index: -1;
+}
+
+article div.container div.contents div.content h3 {
+    font-weight: 500;
+    font-size: 22px;
+    margin: 40px 0 20px;
+}
+
+article div.container div.contents div.content p {
+    font-size: 16px;
+}
