--- a/CSS/style.css
+++ b/CSS/style.css
@@ -307,12 +307,12 @@ header div.container div.right ul li:last-child a::before {
 #about div.container div.left div.image {
     position: relative;
     display: inline-block;
-    width: 90%;
+    width: 85%;
 }
 
 #about div.container div.left div.image>img {
     width: 100%;
-    height: 425px;
+    height: 460px;
 }
 
 #about div.container div.left div.image div.control {
@@ -499,7 +499,7 @@ article {
 }
 
 article div.container div.heading {
-    margin: 80px 0;
+    margin: 30px 0 70px;
 }
 
 article div.container div.heading h2 {
@@ -561,4 +561,116 @@ article div.container div.contents div.content h3 {
 
 article div.container div.contents div.content p {
     font-size: 16px;
+}
+
+/* Recommends section  */
+#recommend_Section {
+    padding: 30px 0px;
+    margin: 10px 0px;
+}
+
+#recommend_Section section.wrapper {
+    margin: 0;
+    margin-left: 8%;
+    width: 100%;
+}
+
+#recommend_Section div.container {}
+
+#recommend_Section div.container div.heading {
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 40px;
+}
+
+#recommend_Section div.container div.heading h2 {
+    position: relative;
+    font-weight: 500;
+    font-size: 30px;
+}
+
+#recommend_Section div.container div.heading h2::after {
+    content: "";
+    position: absolute;
+    height: 4px;
+    width: 14%;
+    left: 0;
+    bottom: -8px;
+    background: var(--Blue);
+    display: block;
+}
+
+#recommend_Section div.container div.heading div.arrows {}
+
+#recommend_Section div.container div.heading div.arrows a {
+    display: inline-block;
+    width: 32px;
+    margin-right: 10px;
+}
+
+#recommend_Section div.container div.heading div.arrows a img {
+    width: 100%;
+}
+
+#recommend_Section div.container div.recommends {
+    display: flex;
+}
+
+#recommend_Section div.container div.recommends div.recommends_Content {
+    width: 20%;
+}
+
+#recommend_Section div.container div.recommends div.recommends_Content ul {
+    margin-top: 40px;
+}
+
+#recommend_Section div.container div.recommends div.recommends_Content ul li {
+    margin-bottom: 20px;
+}
+
+#recommend_Section div.container div.recommends div.recommends_Content ul li a {}
+
+#recommend_Section div.container div.recommends div.recommends_Image {
+    width: 80%;
+    padding: 40px 30px;
+    background-color:#faf9f7 ;
+}
+
+#recommend_Section div.container div.recommends div.recommends_Image ul {
+    display: flex;
+    justify-content: space-between;
+}
+
+#recommend_Section div.container div.recommends div.recommends_Image ul li {
+    width: 31%;
+    position: relative;
+}
+
+#recommend_Section div.container div.recommends div.recommends_Image ul li>a {
+    display: inline-block;
+}
+#recommend_Section div.container div.recommends div.recommends_Image ul li>a>img {
+    width: 100%;
+}
+#recommend_Section div.container div.recommends div.recommends_Image ul li div.arrow {
+    position: absolute;
+    bottom: 4px;
+    height: 55px;
+    width: 40%;
+    background: #f8f4f2;
+    opacity: 0.8;
+    padding: 15px 40px;
+    cursor: pointer;
+}
+#recommend_Section div.container div.recommends div.recommends_Image ul li div.arrow:hover{
+    opacity: 1;
+    background: #fff;
+}
+#recommend_Section div.container div.recommends div.recommends_Image ul li div.arrow a{
+    display: inline-block;
+    width: 25px;
+}
+#recommend_Section div.container div.recommends div.recommends_Image ul li div.arrow a img{
+    width: 100%;
 }
