--- a/CSS/style.css
+++ b/CSS/style.css
@@ -211,7 +211,7 @@ header div.container div.right ul li:last-child a::before {
 #spotlight section.wrapper {
     margin: 0;
     margin-left: 8%;
-    width: 100%;
+    width: 92%;
 }
 
 #spotlight div.container {
@@ -287,13 +287,17 @@ header div.container div.right ul li:last-child a::before {
 #spotlight div.container div.right div.image img {
     overflow: hidden;
     width: 100%;
-    height: 475px;
+    height: 100%;
 }
 
 /* About section  */
 #about {
     width: 100%;
     padding: 100px 0px 40px;
+}
+
+#about section.wrapper {
+    width: 80%;
 }
 
 #about div.container {
@@ -307,21 +311,22 @@ header div.container div.right ul li:last-child a::before {
 #about div.container div.left div.image {
     position: relative;
     display: inline-block;
-    width: 85%;
+    width: 90%;
+    height: 90%;
 }
 
 #about div.container div.left div.image>img {
     width: 100%;
-    height: 460px;
+    height: 100%;
 }
 
 #about div.container div.left div.image div.control {
     position: absolute;
-    bottom: 4px;
+    bottom: 0px;
     background-color: #faf9f7;
-    padding: 20px 40px;
-    width: 175px;
-    height: 80px;
+    padding: 28px 40px;
+    width: 185px;
+    height: 90px;
     display: flex;
     justify-content: space-evenly;
     opacity: 0.5;
@@ -388,11 +393,11 @@ header div.container div.right ul li:last-child a::before {
 #works section.wrapper {
     margin: 0;
     margin-left: 8%;
-    width: 100%;
+    width: 92%;
 }
 
 #works div.container div.heading {
-    width: 90%;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     margin-bottom: 30px;
@@ -437,23 +442,28 @@ header div.container div.right ul li:last-child a::before {
 
 #works div.container div.work ul li>a {
     display: inline-block;
+    width: 100%;
+    height: 100%;
 }
 
 #works div.container div.work ul li>a>img {
     width: 100%;
-    overflow: hidden;
+    height: 100%;
 }
 
 #works div.container div.work ul li div.location {
     position: absolute;
-    bottom: 4px;
+    bottom: 0px;
     height: 75px;
-    width: 85%;
+    width: 80%;
     background: #f8f4f2;
     opacity: 0.8;
     padding: 15px;
     z-index: 2;
     cursor: pointer;
+}
+#works div.container div.work ul li div.location a{
+    font-size: 16px;
 }
 
 #works div.container div.work ul li div.location:hover {
@@ -494,7 +504,7 @@ header div.container div.right ul li:last-child a::before {
 
 /* Why Choice Us  */
 article {
-    padding: 60px 0px;
+    padding: 50px 0px 70px;
     background: #faf9f7;
 }
 
@@ -531,7 +541,7 @@ article div.container div.contents div.content {
 article div.container div.contents div.content a {
     display: block;
     width: 13%;
-    margin-left: 40px;
+    margin-left: 25px;
     position: relative;
     z-index: 0;
 }
@@ -560,7 +570,7 @@ article div.container div.contents div.content h3 {
 }
 
 article div.container div.contents div.content p {
-    font-size: 16px;
+    font-size: 15px;
 }
 
 /* Recommends section  */
@@ -572,7 +582,7 @@ article div.container div.contents div.content p {
 #recommend_Section section.wrapper {
     margin: 0;
     margin-left: 8%;
-    width: 100%;
+    width: 92%;
 }
 
 #recommend_Section div.container {}
@@ -618,7 +628,7 @@ article div.container div.contents div.content p {
 }
 
 #recommend_Section div.container div.recommends div.recommends_Content {
-    width: 20%;
+    width: 30%;
 }
 
 #recommend_Section div.container div.recommends div.recommends_Content ul {
@@ -629,12 +639,35 @@ article div.container div.contents div.content p {
     margin-bottom: 20px;
 }
 
-#recommend_Section div.container div.recommends div.recommends_Content ul li a {}
+#recommend_Section div.container div.recommends div.recommends_Content ul li:nth-child(2) {}
+
+#recommend_Section div.container div.recommends div.recommends_Content ul li:nth-child(2)>a {
+    position: relative;
+    margin-left: 70px;
+    color: var(--Blue);
+}
+
+#recommend_Section div.container div.recommends div.recommends_Content ul li:nth-child(2)>a::before {
+    content: "";
+    height: 3px;
+    width: 20%;
+    background: var(--Blue);
+    display: block;
+    position: absolute;
+    top: 10px;
+    left: -65px;
+}
+
+#recommend_Section div.container div.recommends div.recommends_Content ul li a {
+    display: block;
+    font-weight: 500;
+}
 
 #recommend_Section div.container div.recommends div.recommends_Image {
-    width: 80%;
-    padding: 40px 30px;
-    background-color:#faf9f7 ;
+    width: 70%;
+    padding: 40px;
+    padding-right: 0px;
+    background-color: #faf9f7;
 }
 
 #recommend_Section div.container div.recommends div.recommends_Image ul {
@@ -650,27 +683,31 @@ article div.container div.contents div.content p {
 #recommend_Section div.container div.recommends div.recommends_Image ul li>a {
     display: inline-block;
 }
+
 #recommend_Section div.container div.recommends div.recommends_Image ul li>a>img {
     width: 100%;
 }
+
 #recommend_Section div.container div.recommends div.recommends_Image ul li div.arrow {
     position: absolute;
     bottom: 4px;
-    height: 55px;
-    width: 40%;
+    height: 45px;
+    width: 31%;
     background: #f8f4f2;
     opacity: 0.8;
-    padding: 15px 40px;
+    padding: 14px 27px;
     cursor: pointer;
 }
-#recommend_Section div.container div.recommends div.recommends_Image ul li div.arrow:hover{
-    opacity: 1;
-    background: #fff;
+
+#recommend_Section div.container div.recommends div.recommends_Image ul li div.arrow:hover {
+    opacity: 0.9;
 }
-#recommend_Section div.container div.recommends div.recommends_Image ul li div.arrow a{
+
+#recommend_Section div.container div.recommends div.recommends_Image ul li div.arrow a {
     display: inline-block;
-    width: 25px;
+    width: 18px;
 }
-#recommend_Section div.container div.recommends div.recommends_Image ul li div.arrow a img{
+
+#recommend_Section div.container div.recommends div.recommends_Image ul li div.arrow a img {
     width: 100%;
 }
