--- a/CSS/style.css
+++ b/CSS/style.css
@@ -462,7 +462,8 @@ header div.container div.right ul li:last-child a::before {
     z-index: 2;
     cursor: pointer;
 }
-#works div.container div.work ul li div.location a{
+
+#works div.container div.work ul li div.location a {
     font-size: 16px;
 }
 
@@ -713,18 +714,175 @@ article div.container div.contents div.content p {
 }
 
 /* Contact section  */
-section.contact{
-    
+section.contact {
+    background: hsl(237, 29%, 27%);
 }
-section.contact section.wrapper{
+
+section.contact section.wrapper {}
+
+section.contact div.container {
+    display: flex;
+    padding: 50px 0px;
+    position: relative;
+    z-index: 0;
+}
+
+section.contact div.container::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 12%;
+    background-color: #faf9f7;
+    height: 100%;
+    width: 25%;
+    z-index: -1;
+}
+
+section.contact div.container div.left {
+    width: 50%;
+    display: flex;
+    align-items: center;
+}
+
+section.contact div.container div.left div.content {
+    width: 50%;
+}
+
+section.contact div.container div.left div.content h2 {
+    color: #fff;
+    position: relative;
+    font-weight: 500;
+
+    font-size: 45px;
 
 }
-section.contact div.container{
-display: flex;
-}
-section.contact div.container div.left{
 
+section.contact div.container div.left div.content h2::after {
+    content: "";
+    position: absolute;
+    height: 4px;
+    width: 22%;
+    left: 0;
+    bottom: -8px;
+    background: var(--Blue);
+    display: block;
 }
-section.contact div.container div.right{
 
+section.contact div.container div.left div.content p.address {
+    margin: 35px 0px 15px;
+}
+
+section.contact div.container div.left div.content p {
+    color: #b3b4c9;
+    font-size: 16px;
+}
+
+section.contact div.container div.left div.content ul {
+    margin-top: 15px;
+    padding: 20px 140px 20px 0px;
+    display: flex;
+    justify-content: space-between;
+}
+
+section.contact div.container div.left div.content ul li {}
+
+section.contact div.container div.left div.content ul li a {
+    display: inline-block;
+}
+
+section.contact div.container div.left div.content ul li a img {
+    width: 100%;
+    height: 100%;
+}
+
+section.contact div.container div.right {
+    width: 50%;
+}
+
+section.contact div.container div.right form {
+    background: #fff;
+    padding: 30px;
+    z-index: 2;
+}
+
+section.contact div.container div.right form h4 {
+    font-weight: 500;
+    font-size: 32px;
+    margin-bottom: 35px;
+}
+
+section.contact div.container div.right form div.input-container {
+    width: 100%;
+    height: 65px;
+    position: relative;
+    margin-bottom: 20px;
+}
+
+section.contact div.container div.right form div.textarea {
+    height: 120px;
+}
+
+section.contact div.container div.right form div.input-container label {
+    width: 80px;
+    text-align: center;
+    position: absolute;
+    left: 10px;
+    top: 20px;
+    transition: all 0.2s;
+    padding: 0 2px;
+    z-index: 2;
+    color: #b3b3b3;
+}
+
+section.contact div.container div.right form div.input-container label::before {
+    content: "";
+    height: 5px;
+    background: #f4f4f4;
+    position: absolute;
+    left: 0px;
+    top: 9px;
+    width: 100%;
+    z-index: -1;
+}
+
+section.contact div.container div.right form div.input-container .text-input {
+    padding: 0.8rem;
+    width: 100%;
+    height: 100%;
+    background: #f4f4f4;
+    font-size: 18px;
+    outline: none;
+    transition: all 0.3s;
+    color: #90979b;
+}
+
+section.contact div.container div.right form div.input-container .text-input:focus {
+    border: 2px solid #b2b7d3;
+}
+
+.text-input:focus+label,
+.filled {
+    top: -10px !important;
+    color: #afb4b7 !important;
+    font-size: 14px;
+}
+
+section.contact div.container div.right form div.input-container .text-input::placeholder {
+    font-size: 16px;
+    opacity: 0;
+    transition: all 0.3s;
+}
+
+section.contact div.container div.right form div.input-container .text-input:focus::placeholder {
+    opacity: 1;
+}
+
+section.contact div.container div.right form button {
+    display: block;
+    text-align: center;
+    background: var(--Blue);
+    width: 100%;
+    height: 65px;
+    color: #fff;
+    font-size: 20px;
 }
