--- a/CSS/style.css
+++ b/CSS/style.css
@@ -708,15 +708,12 @@ article div.container div.contents div.content p {
 }
 
 /* Contact section  */
-section.contact {
-    background: hsl(237, 29%, 27%);
-}
-
 section.contact div.container {
     display: flex;
     padding: 50px 0px;
     position: relative;
     z-index: 0;
+    background: var(--Dark-Blue);
 }
 
 section.contact div.container::before {
@@ -734,6 +731,7 @@ section.contact div.container div.left {
     width: 50%;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 section.contact div.container div.left div.content {
@@ -744,9 +742,7 @@ section.contact div.container div.left div.content h2 {
     color: #fff;
     position: relative;
     font-weight: 500;
-
     font-size: 45px;
-
 }
 
 section.contact div.container div.left div.content h2::after {
@@ -997,4 +993,70 @@ section.contact div.container div.right form button {
 #help div.container div.right div.contents_And_Images div.img>img {
     width: 100%;
     height: 100%;
+}
+
+/* Footer  */
+footer {
+    background: var(--Dark-Blue);
+    padding: 50px 0px 0px;
+}
+
+footer div.container {}
+
+footer div.container div.top {
+    display: flex;
+    border-bottom: 1px solid var(--Gray);
+}
+
+footer div.container div.top {
+    display: flex;
+}
+footer div.container div.top div.left {
+    width: 40%;
+}
+footer div.container div.top div.left h1{
+    
+}
+footer div.container div.top div.left h1 a{
+display: inline-block;
+width: 150px;
+}
+footer div.container div.top div.left h1 a img{
+width: 100%;
+height: 100%;
+}
+footer div.container div.top div.middle {
+    display: flex;
+    justify-content: space-evenly;
+    width: 40%;
+}
+footer div.container div.top div.middle ul li a:hover{
+    color: #fff;
+}
+footer div.container div.top div.middle h4 {
+    color: #fff;
+}
+
+footer div.container div.top div.right {
+    width: 20%;
+}
+footer div.container div.top div.right h4{
+    color: #fff;
+}
+footer div.container div.top div.right p a:hover{
+    color: #fff;
+}
+footer div.container div.top div.right ul{
+    display: flex;
+    justify-content: space-between;
+}
+footer div.container div.bottom{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80px;
+    color: var(--Gray);
+}
+footer div.container div.bottom span a{
+    color:var(--Blue);
 }
