--- a/CSS/style.css
+++ b/CSS/style.css
@@ -244,23 +244,23 @@ header div.container div.right ul li:last-child a::before {
 
 #spotlight div.container div.left div.counts div.content {
     position: absolute;
-    bottom: -346px;
-    height: 325px;
+    bottom: -407px;
+    height: 380px;
     width: 485px;
-    padding: 25px 44px;
+    padding: 25px 44px 25px;
     background-color: #faf9f7;
 }
 
 #spotlight div.container div.left div.counts div.content h2 {
     font-weight: 600;
-    font-size: 30px;
+    font-size: 35px;
     margin: 15px 0px;
     padding-right: 40px;
 }
 
 #spotlight div.container div.left div.counts div.content p {
     font-size: 15px;
-    margin-bottom: 35px;
+    margin-bottom: 45px;
     padding-right: 10px;
 }
 
@@ -386,7 +386,7 @@ header div.container div.right ul li:last-child a::before {
 
 /* Work section  */
 #works {
-    padding: 30px 0px;
+    padding: 50px 0px 80px;
     margin: 10px 0px;
 }
 
@@ -576,7 +576,7 @@ article div.container div.contents div.content p {
 
 /* Recommends section  */
 #recommend_Section {
-    padding: 30px 0px;
+    padding: 80px 0px;
     margin: 10px 0px;
 }
 
@@ -629,7 +629,7 @@ article div.container div.contents div.content p {
 }
 
 #recommend_Section div.container div.recommends div.recommends_Content ul {
-    margin-top: 40px;
+    margin-top: 30px;
 }
 
 #recommend_Section div.container div.recommends div.recommends_Content ul li {
@@ -720,10 +720,10 @@ section.contact div.container::before {
     content: "";
     position: absolute;
     top: 0;
-    right: 12%;
+    right: 18%;
     background-color: #faf9f7;
     height: 100%;
-    width: 25%;
+    width: 21%;
     z-index: -1;
 }
 
@@ -786,6 +786,7 @@ section.contact div.container div.right {
 }
 
 section.contact div.container div.right form {
+    width: 85%;
     background: #fff;
     padding: 30px;
     z-index: 2;
@@ -876,7 +877,7 @@ section.contact div.container div.right form button {
 
 /* Help section */
 #help {
-    padding: 40px 0px;
+    padding: 80px 0px;
 }
 
 #help div.container {
@@ -1011,28 +1012,40 @@ footer div.container div.top {
 footer div.container div.top {
     display: flex;
 }
+
 footer div.container div.top div.left {
     width: 40%;
 }
-footer div.container div.top div.left h1{
-    
+
+footer div.container div.top div.left h1 {}
+
+footer div.container div.top div.left h1 a {
+    display: inline-block;
+    width: 150px;
 }
-footer div.container div.top div.left h1 a{
-display: inline-block;
-width: 150px;
+
+footer div.container div.top div.left h1 a img {
+    width: 100%;
+    height: 100%;
 }
-footer div.container div.top div.left h1 a img{
-width: 100%;
-height: 100%;
-}
+
 footer div.container div.top div.middle {
     display: flex;
     justify-content: space-evenly;
     width: 40%;
+    margin-bottom: 10px;
 }
-footer div.container div.top div.middle ul li a:hover{
+
+footer div.container div.top div.middle ul {}
+
+footer div.container div.top div.middle ul li {
+    margin: 20px 0px;
+}
+
+footer div.container div.top div.middle ul li a:hover {
     color: #fff;
 }
+
 footer div.container div.top div.middle h4 {
     color: #fff;
 }
@@ -1040,23 +1053,65 @@ footer div.container div.top div.middle h4 {
 footer div.container div.top div.right {
     width: 20%;
 }
-footer div.container div.top div.right h4{
+
+footer div.container div.top div.right h4 {
     color: #fff;
 }
-footer div.container div.top div.right p a:hover{
+
+footer div.container div.top div.right p.number {
+    margin-top: 20px;
+}
+
+footer div.container div.top div.right p a:hover {
     color: #fff;
 }
-footer div.container div.top div.right ul{
+
+footer div.container div.top div.right ul {
     display: flex;
-    justify-content: space-between;
+    margin: 30px 0px;
 }
-footer div.container div.bottom{
+
+footer div.container div.top div.right ul li {
+    margin-right: 40px;
+}
+
+footer div.container div.top div.right ul li a {
+    display: inline-block;
+    position: relative;
+    width: 20px;
+    z-index: 1;
+}
+
+footer div.container div.top div.right ul li a::before {
+    content: "";
+    background-color: #fff;
+    height: 35px;
+    width: 42px;
+    position: absolute;
+    top: -6px;
+    right: -12px;
+    z-index: -1;
+}
+
+footer div.container div.top div.right ul li:first-child a {
+    width: 10px;
+    margin-left: 20px;
+}
+
+footer div.container div.top div.right ul li a img {
+    width: 100%;
+    height: 100%;
+
+}
+
+footer div.container div.bottom {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 80px;
     color: var(--Gray);
 }
-footer div.container div.bottom span a{
-    color:var(--Blue);
+
+footer div.container div.bottom span a {
+    color: var(--Blue);
 }
