--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -1,21 +1,137 @@
-@media all and (max-width: 1380px){
-    #spotlight div.container div.left div.counts div.content {
+@media all and (max-width: 1380px) {
+    #spotlight div.container div.right div.image div.content {
         position: absolute;
-        bottom: -342px;
-        height: 330px;
-        width: 485px;
+        top: 30%;
+        left: -314px;
+        height: 70%;
+        width: 60%;
         padding: 25px 44px 25px;
         background-color: #faf9f7;
     }
-    #spotlight div.container div.left div.counts div.content h2 {
+
+    #spotlight div.container div.right div.image div.content h2 {
         font-weight: 600;
-        font-size: 30px;
+        font-size: 32px;
         margin: 15px 0px;
         padding-right: 40px;
     }
-    #spotlight div.container div.left div.counts div.content p {
+
+    #spotlight div.container div.right div.image div.content p {
         font-size: 15px;
         margin-bottom: 30px;
         padding-right: 10px;
+    }
+}
+
+@media all and (max-width: 1280px) {
+    /* spotlight */
+    #spotlight div.container div.right div.image div.content {
+        position: absolute;
+        top: 30%;
+        left: -314px;
+        height: 70%;
+        width: 67%;
+        padding: 25px 30px 0px;
+        background-color: #faf9f7;
+    }
+    #spotlight div.container div.right div.image div.content p {
+        font-size: 15px;
+        margin-bottom: 22px;
+        padding-right: 10px;
+    }
+    #spotlight div.container div.right div.image div.content h2 {
+        font-weight: 600;
+        font-size: 32px;
+        margin: 5px 0px;
+        padding-right: 40px;
+    }
+    /* work section  */
+    #works div.container div.work ul li>div.location>h4 {
+        font-size: 14px;
+    }
+    /* Why choice Us  */
+    article div.container div.contents div.content p {
+        font-size: 14px;
+    }
+    /* contact  */
+    section.contact div.container div.left div.content h2 {
+        color: #fff;
+        position: relative;
+        font-weight: 500;
+        font-size: 40px;
+    }
+    /* Help  */
+    #help div.container div.left h2 {
+        font-weight: 500;
+        font-size: 30px;
+        position: relative;
+    }
+}
+@media all and (max-width: 1080px){
+    section.contact div.container div.left div.content h2 {
+        color: #fff;
+        position: relative;
+        font-weight: 500;
+        font-size: 35px;
+    }
+    section.contact div.container div.right form div.input-container {
+        width: 100%;
+        height: 55px;
+        position: relative;
+        margin-bottom: 20px;
+    }
+    section.contact div.container div.right form div.textarea {
+        height: 90px;
+    }
+    section.contact div.container div.right form button {
+        display: block;
+        text-align: center;
+        background: var(--Blue);
+        width: 100%;
+        height: 55px;
+        color: #fff;
+        font-size: 20px;
+        cursor: pointer;
+    }
+    #help div.container div.left h2 {
+        font-weight: 500;
+        font-size: 28px;
+        position: relative;
+    }
+    #help div.container div.right div.contents_And_Images {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        height: 100px;
+        margin-top: 20px;
+    }
+    footer div.container div.top div.left p {
+        font-size: 14px;
+    }
+}
+@media all and (max-width: 980px){
+    header div.container div.left {
+        width: 25%;
+    }
+    header div.container div.right {
+        width: 75%;
+    }
+    #spotlight div.container{
+       flex-direction: column-reverse;
+    }
+    #spotlight div.container div.left {
+        width: 100%;
+        padding: 45px 15px;
+    }
+    #spotlight div.container div.right {
+        width: 100%;
+    }
+    #spotlight div.container div.right div.image div.content {
+        position: absolute;
+        bottom: -320px;
+        height: 295px;
+        width: 400px;
+        padding: 15px 20px 10px;
+        background-color: #faf9f7;
     }
 }
