--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -68,6 +68,54 @@
     }
 }
 @media all and (max-width: 1080px){
+    #spotlight div.container div.right div.image div.content {
+        position: absolute;
+        top: 30%;
+        left: -314px;
+        height: 70%;
+        width: 67%;
+        padding: 15px 20px 0px;
+        background-color: #faf9f7;
+    }
+    #spotlight div.container div.right div.image div.content h2 {
+        font-weight: 600;
+        font-size: 30px;
+        margin: 10px 0px;
+        padding-right: 40px;
+    }
+    #spotlight div.container div.right div.image div.content p {
+        font-size: 14px;
+        margin-bottom: 30px;
+        padding-right: 10px;
+    }
+    #about div.container div.right div.content h2 {
+        position: relative;
+        font-weight: 500;
+        font-size: 30px;
+        margin-bottom: 20px;
+    }
+    #about div.container div.right div.content p {
+        padding-right: 0px;
+        margin-bottom: 30px;
+    }
+    #works div.container div.work ul li>div.location>h4 {
+        font-size: 12px;
+        font-weight: 600;
+    }
+    #works div.container div.work ul li div.location a {
+        font-size: 12px;
+    }
+    #works div.container div.work ul li div.location {
+        position: absolute;
+        bottom: 0px;
+        height: 20%;
+        width: 80%;
+        background: #f8f4f2;
+        opacity: 0.8;
+        padding: 15px;
+        z-index: 2;
+        cursor: pointer;
+    }
     section.contact div.container div.left div.content h2 {
         color: #fff;
         position: relative;
@@ -115,23 +163,5 @@
     }
     header div.container div.right {
         width: 75%;
-    }
-    #spotlight div.container{
-       flex-direction: column-reverse;
-    }
-    #spotlight div.container div.left {
-        width: 100%;
-        padding: 45px 15px;
-    }
-    #spotlight div.container div.right {
-        width: 100%;
-    }
-    #spotlight div.container div.right div.image div.content {
-        position: absolute;
-        bottom: -320px;
-        height: 295px;
-        width: 400px;
-        padding: 15px 20px 10px;
-        background-color: #faf9f7;
     }
 }
