--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -560,4 +560,223 @@
 }
 
 @media all and (max-width: 640px){
+    header div.container div.right {
+        width: 75%;
+        display: none;
+    }
+    header div.container div.left {
+        width: 35%;
+    }
+    #spotlight div.container div.right div.image div.content {
+        position: absolute;
+        top: 29%;
+        left: -51%;
+        height: 70%;
+        width: 70%;
+        padding: 10px 20px 0px;
+        text-align: left;
+        background-color: #faf9f7;
+    }
+    #spotlight div.container div.right div.image div.content h2 {
+        font-weight: 600;
+        font-size: 14px;
+        margin: 6px 0px;
+        padding-right: 40px;
+    }
+    #spotlight div.container div.right div.image div.content a.button {
+        margin-top: 10px;
+        padding: 8px 12px;
+        background: var(--Blue);
+        color: #fff;
+        font-size: 8px;
+    }
+    #spotlight div.container div.right div.image div.content p {
+        font-size: 8px;
+        font-weight: 500;
+        margin-bottom: 10px;
+        padding-right: 10px;
+    }
+    #spotlight div.container div.left div.counts div.count span.number {
+        color: var(--Brown);
+        font-size: 20px;
+        font-family: 'Antonio';
+    }
+    #spotlight div.container div.left div.counts div.count p{
+        font-size: 12px;
+    }
+    #about div.container {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    #about div.container div.left{
+        width: 100%;
+    }
+    #about div.container div.right{
+        width: 100%;
+    }
+    #about div.container div.left div.image div.control {
+        position: absolute;
+        bottom: 0px;
+        background-color: #faf9f7;
+        padding: 18px 24px;
+        width: 200px;
+        height: 80px;
+        display: flex;
+        justify-content: space-evenly;
+        opacity: 0.5;
+        transition: opacity 0.4s ease-in;
+    }
+    #about div.container div.left div.image div.control a {
+        display: inline-block;
+        width: 35px;
+    }
+    #about div.container div.right div.content p {
+        padding-right: 0px;
+        margin-bottom: 30px;
+        font-size: 12px;
+    }
+    #works div.container div.work ul li {
+        position: relative;
+        width: 45%;
+        margin-top: 40px;
+    }
+    #works div.container div.work ul li>div.location>h4 {
+        font-size: 14px;
+        font-weight: 600;
+    }
+    article div.container div.contents div.content {
+        width: 47%;
+        margin-top: 50px;
+    }
+    article div.container div.contents div.content h3 {
+        font-weight: 500;
+        font-size: 20px;
+        margin: 40px 0 20px;
+    }
+    #recommend_Section div.container div.heading h2 {
+        position: relative;
+        font-weight: 500;
+        font-size: 22px;
+    }
+    #recommend_Section div.container div.heading div.arrows a {
+        display: inline-block;
+        width: 30px;
+        margin-right: 10px;
+    }
+    #recommend_Section div.container div.recommends div.recommends_Content ul li{
+        width: 33%;
+    }
+    #recommend_Section div.container div.recommends div.recommends_Content ul li a {
+        display: block;
+        font-weight: 500;
+        font-size: 14px;
+    }
+    #recommend_Section div.container div.recommends div.recommends_Content ul li:nth-child(2)>a::before {
+        content: "";
+        height: 3px;
+        width: 30%;
+        background: var(--Blue);
+        display: block;
+        position: absolute;
+        top: 7px;
+        left: -30px;
+    }
+    #recommend_Section div.container div.recommends div.recommends_Image ul {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: end;
+    }
+    #recommend_Section div.container div.recommends div.recommends_Image ul li {
+        width: 75%;
+        margin-top: 40px;
+        position: relative;
+    }
+    #recommend_Section div.container div.recommends div.recommends_Image ul li div.arrow {
+        position: absolute;
+        bottom: 4px;
+        height: 70px;
+        width: 40%;
+        background: #f8f4f2;
+        opacity: 0.8;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+    }
+    #works div.container div.work ul li {
+        position: relative;
+        width: 48%;
+        margin-top: 40px;
+    }
+    #recommend_Section div.container div.recommends div.recommends_Image ul li div.arrow a {
+        display: inline-block;
+        width: 25px;
+    }
+    #recommend_Section div.container div.recommends div.recommends_Image {
+        margin-top: 45px;
+        width: 100%;
+        padding: 40px 0px;
+        padding-right: 0px;
+        background-color: #faf9f7;
+    }
+    section.contact div.container div.left div.content {
+        width: 80%;
+        padding-right: 20%;
+    }
+    section.contact div.container div.right form div.input-container {
+        width: 100%;
+        height: 50px;
+        position: relative;
+        margin-bottom: 20px;
+    }
+    section.contact div.container div.right form div.textarea {
+        height: 98px;
+    }
+    section.contact div.container div.right form button {
+        display: block;
+        text-align: center;
+        background: var(--Blue);
+        width: 100%;
+        height: 50px;
+        color: #fff;
+        font-size: 20px;
+        cursor: pointer;
+    }
+    #help div.container div.left h2 {
+        font-weight: 500;
+        font-size: 20px;
+        position: relative;
+        padding-right: 40%;
+    }
+    #help div.container div.left h2>span {
+        font-weight: 500;
+        font-size: 22px;
+        color: var(--Blue);
+    }
+    #help div.container div.left h2::before {
+        content: "";
+        position: absolute;
+        height: 4px;
+        width: 11%;
+        left: 0;
+        bottom: -8px;
+        background: var(--Blue);
+        display: block;
+    }
+    #help div.container div.right div.contents_And_Images div.content>p {
+        margin-top: 8px;
+        font-size: 12px;
+    }
+    footer div.container div.top div.left {
+        width: 100%;
+        margin-bottom: 50px;
+    }
+    footer div.container div.top div.middle {
+        width: 60%;
+        justify-content: space-between;
+    }
+}
+
+@media all and (max-width: 480px){
 }
